objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <picklist>
            <picklistValues>
                <fullName>Department of Agriculture (DOA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Commerce (DOC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Defense (DOD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Aeronautics and Space Administration (NASA)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <picklist>
            <controllingField>Agency__c</controllingField>
            <picklistValues>
                <fullName>Defense Microelectronics Activity (DMEA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy (NAVY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missile Defense Agency (MDA)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EHBId__c</fullName>
        <externalId>true</externalId>
        <label>EHBId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Horizontal_Scope_Rating__c</fullName>
        <label>Horizontal Scope Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Numerous Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Two or Three (related) Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - One Primary Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Application Status Uncertain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Infusion_Rating__c</fullName>
        <label>Infusion Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Direct Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Definitive Infusion Path</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Potential Infusion Path</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - No Definite Plans Yet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kind_of_Success__c</fullName>
        <label>Kind of Success</label>
        <picklist>
            <picklistValues>
                <fullName>Funded Phase III Infusion Type A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded Phase III Infusion Type B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfunded Infusion Type A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfunded Infusion Type B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase III with another Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2E with Non-NASA Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Government Commercialization</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <picklist>
            <picklistValues>
                <fullName>SBIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STTR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Title__c</fullName>
        <formula>Related_Award__r.Proposal_Tite_del__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <formula>Related_Award__r.Proposal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Award</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Opportunity and Award Firm should be the same</errorMessage>
            <filterItems>
                <field>Awards__c.Firm__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Awards__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TA__c</fullName>
        <formula>Related_Award__r.Technology_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award Technology Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_Customers__c</fullName>
        <label>Targeted Customers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technology_Area__c</fullName>
        <label>Opportunity Technology Area</label>
        <picklist>
            <picklistValues>
                <fullName>Launch Propulsion Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Space Propulsion Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Space Power and Energy Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robotics, Telerobotics and Autonomous Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication and Navigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Health, Life Support and Habitation Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Exploration Destination Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science Instruments, Observatories and Sensor Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entry, Descent and Landing Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nanotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modeling, Simulation, Information Technology and Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials, Structural, Mechanical Systems and Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground and Launch System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal Management Systems</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transferred_to_EHB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transferred to EHB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Custom Help Text. To be completed.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercialized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product-Bought</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Success__c</fullName>
        <label>Type of Success</label>
        <picklist>
            <picklistValues>
                <fullName>Commercialization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Specified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase III</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>